--- a/composer.json
+++ b/composer.json
@@ -6,12 +6,13 @@
     "type": "project",
     "require": {
         "php": ">=7.0.0",
+        "doctrine/dbal": "v2.4.2",
         "fideloper/proxy": "~3.3",
         "intervention/image": "^2.4",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
         "squizlabs/php_codesniffer": "*",
-        "doctrine/dbal": "v2.4.2"
+        "unisharp/laravel-filemanager": "~1.8"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
