--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     },
     "devDependencies": {
         "admin-lte": "^2.4.2",
-        "axios": "^0.17",
+        "axios": "^0.19.0",
         "bootstrap-sass": "^3.3.7",
         "cross-env": "^5.1.3",
         "jquery": "^3.3.1",
@@ -20,6 +20,7 @@
         "vue": "^2.5.13"
     },
     "dependencies": {
+        "ajv": "^6.10.2",
         "font-awesome": "^4.7.0",
         "ionicons": "^3.0.0",
         "myriad-font": "0.0.2",
