--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
         "squizlabs/php_codesniffer": "*",
-        "unisharp/laravel-filemanager": "~1.8"
+        "unisharp/laravel-filemanager": "~1.8",
+        "nesbot/carbon": "1.22.*"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
